[package]
name = "stocktools-rs"
version = "0.1.0"
edition = "2018"
authors = ["James Robertson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"]}
serde_json = { version = "*" }
